--- a/phase1/login_page.html
+++ b/phase1/login_page.html
@@ -23,7 +23,7 @@
     </div>
     
     <navbar class="blur navbar margin-down">
-        <div class="subnav title">Space-X</div></br>
+        <div class="subnav title">Mihoyo-X</div></br>
         <img src = "https://cdn1.iconfinder.com/data/icons/science-36/24/science_space_planet_ring_saturn-512.png"/>
          <!--<div class="subnav">The Logo</div>
         <div class="subnav buttons">
