--- a/phase1/register_page.html
+++ b/phase1/register_page.html
@@ -23,7 +23,7 @@
     </div>
     
     <navbar class="blur navbar margin-down">
-        <div class="subnav title">Space-X</div></br>
+        <div class="subnav title">Mihoyo-X</div></br>
         <img src = "https://cdn1.iconfinder.com/data/icons/science-36/24/science_space_planet_ring_saturn-512.png"/>
          <!--<div class="subnav">The Logo</div>
         <div class="subnav buttons">
@@ -57,7 +57,7 @@
                     <img src = "https://filestore.community.support.microsoft.com/api/images/0ce956b2-9787-4756-a580-299568810730?upload=true"/>
                     <input type="date"  placeholder="Birthday"  class = "answer_box">
                 </div>
-                    <input type="button" onclick="location.href='main_page.html'" value="REGISTER" class = "login_but">
+                    <input type="button" onclick="location.href='login_page.html'" value="REGISTER" class = "login_but">
             </form>      
         </div>
 
