--- a/phase1/update_post_page.html
+++ b/phase1/update_post_page.html
@@ -10,7 +10,6 @@
 <body>
     <navbar class="blur navbar margin-down">
         <div class="subnav title">The Logo</div>
-        <div class="subnav">Middle Contents</div>
         <div class="subnav buttons">
             <input type="button" onclick="location.href='login_page.html'" value="Login">
             <input type="button" onclick="location.href='register_page.html'" value="Register">
@@ -25,11 +24,20 @@
                     <label>Title</label>
                     <input type="text" placeholder="Enter Title">
                 </div>
+                <label>Tag</label>
+                <select>
+                    <option>Genshin Impact</option>
+                    <option>Honkai Star Rail</option>
+                    <option>Honkai Impact</option>
+                    <option>Zenless Zone Zero</option>
+                    <option>Mihoyo</option>
+                </select>
                 <div class="input-box">
                     <label>Content</label>
-                    <input type="text" placeholder="Enter Content" class="post-content-box">
+                    <div class="post-content-box" contenteditable="true" placeholder="Enter your reply here" oninput="if(this.innerHTML.trim()==='<br>')this.innerHTML=''"></div>
                 </div>
-                <input type="button" onclick="location.href='main_page.html'" value="Create Post">
+
+                <input type="button" onclick="location.href='main_page.html'" value="Update Post">
             </form>
         </div>
     </div>
