--- a/phase1/post_page_2.html
+++ b/phase1/post_page_2.html
@@ -11,8 +11,8 @@
 </head>
 <body>
     <navbar class="navbar margin-down">
-        <div class="subnav title">The Logo</div>
-        <div class="subnav">Middle Contents</div>
+        <div class="subnav title">Mihoyo-X</div>
+        <img src = "https://static.miraheze.org/houkai2ndwiki/thumb/0/06/MiHoYo_O_logo.webp/739px-MiHoYo_O_logo.webp.png" class="main-logo"/>
         <div class="subnav buttons">
             <input type="button" onclick="location.href='login_page.html'" value="Login">
             <input type="button" onclick="location.href='register_page.html'" value="Register">
@@ -57,8 +57,8 @@
                     <img class="pfp" src="https://upload.wikimedia.org/wikipedia/commons/a/af/Default_avatar_profile.jpg">
                 </div>
                 <div class="commentTextContainer">
-                    <h4>Name: x</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum quam et aperiam perferendis, omnis voluptas id dolorum ab asperiores totam. Sapiente corrupti rerum consequuntur neque, molestias vero magni ea provident!</p>
+                    <h4>John Legend</h4>
+                    <p>Very Hot Post</p>
                     <div class="buttonsContainer editCommentButtons">
                         <button id="attachFilesComment">Attach Files</button>
                         <button id="postComment" onclick="editCommentDiv(this)">Edit Comment</button>
@@ -86,8 +86,8 @@
                                 <img class="pfp" src="https://upload.wikimedia.org/wikipedia/commons/a/af/Default_avatar_profile.jpg">
                             </div>
                             <div class="commentTextContainer">
-                                <h4>Name: x</h4>
-                                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eius temporibus molestiae consequuntur ea asperiores, praesentium cupiditate illo nihil atque, deleniti doloremque eligendi maiores sunt commodi eaque accusamus dignissimos. Sint, numquam?</p>
+                                <h4>WarlordX6</h4>
+                                <p>Yey i uninstall steam</p>
                                 <div class="commentActionsContainer">
                                     <i class="fa-solid fa-thumbs-up"></i>
                                     <span> 123</span>
@@ -113,8 +113,8 @@
                     <img class="pfp" src="https://upload.wikimedia.org/wikipedia/commons/a/af/Default_avatar_profile.jpg">
                 </div>
                 <div class="commentTextContainer">
-                    <h4>Name: x</h4>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eius temporibus molestiae consequuntur ea asperiores, praesentium cupiditate illo nihil atque, deleniti doloremque eligendi maiores sunt commodi eaque accusamus dignissimos. Sint, numquam?</p>
+                    <h4>Katmeow123</h4>
+                    <p>Wow very nice, give me primogems</p>
                     <div class="commentActionsContainer">
                         <i class="fa-solid fa-thumbs-up"></i>
                         <span> 123</span>
