--- a/phase1/user_profile_page.html
+++ b/phase1/user_profile_page.html
@@ -11,6 +11,7 @@
 <body>
     <navbar class="blur navbar navbar-img" style="height:200px;">
         <div class="subnav title"><div class=TITLEE onclick="location.href ='main_page.html'">Mihoyo-X</div></div>
+        <img src = "https://static.miraheze.org/houkai2ndwiki/thumb/0/06/MiHoYo_O_logo.webp/739px-MiHoYo_O_logo.webp.png"/>
         <div class="subnav buttons">
             <input type="button" onclick="location.href='login_page.html'" value="Login">
             <input type="button" onclick="location.href='register_page.html'" value="Register">
@@ -32,7 +33,7 @@
         </div>
      
         <div class="description-container">
-            <p class="profile-description">Hello All the people around the world, My name is Jim the Baptist, Thank you.</p>
+            <p class="profile-description">Hello You cant see meeiee.</p>
         </div>
         
 
