--- a/phase1/post_page_4.html
+++ b/phase1/post_page_4.html
@@ -11,8 +11,8 @@
 </head>
 <body>
     <navbar class="navbar margin-down">
-        <div class="subnav title">The Logo</div>
-        <div class="subnav">Middle Contents</div>
+        <div class="subnav title">Mihoyo-X</div>
+        <img src = "https://static.miraheze.org/houkai2ndwiki/thumb/0/06/MiHoYo_O_logo.webp/739px-MiHoYo_O_logo.webp.png" class="main-logo"/>
         <div class="subnav buttons">
             <input type="button" onclick="location.href='login_page.html'" value="Login">
             <input type="button" onclick="location.href='register_page.html'" value="Register">
