--- a/phase1/register_page.html
+++ b/phase1/register_page.html
@@ -24,7 +24,7 @@
     
     <navbar class="blur navbar margin-down">
         <div class="subnav title">Mihoyo-X</div></br>
-        <img src = "https://cdn1.iconfinder.com/data/icons/science-36/24/science_space_planet_ring_saturn-512.png"/>
+        <img src = "https://static.miraheze.org/houkai2ndwiki/thumb/0/06/MiHoYo_O_logo.webp/739px-MiHoYo_O_logo.webp.png"/>
          <!--<div class="subnav">The Logo</div>
         <div class="subnav buttons">
             <input type="button" onclick="location.href='login_page.html'" value="Login">
