--- a/phase1/update_post_page.html
+++ b/phase1/update_post_page.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <navbar class="blur navbar margin-down">
-        <div class="subnav title">The Logo</div>
+        <div class="subnav title">Mihoyo-X</div>
         <div class="subnav buttons">
             <input type="button" onclick="location.href='login_page.html'" value="Login">
             <input type="button" onclick="location.href='register_page.html'" value="Register">
