--- a/phase1/main_page.html
+++ b/phase1/main_page.html
@@ -101,7 +101,7 @@
             <div class="description-post">The reflection of Penacony cast upon the deep. The "Nightmare" professed by The Family. However, what people don't know is that this primordial Memory Zone is the true form of the Dreamscape.
 
             </div>
-            <div class="tags"><button style="margin-right:10px;">#Honkai Star Rail</button>></div>
+            <div class="tags"><button style="margin-right:10px;">#Honkai Star Rail</button></div>
             <div class="img-div-post"><img src="./css/starrail1.jpg" class="img-post"></div>
             <br>
             <input type="button" onclick="location.href='post_page_4.html'" value="See More">
@@ -116,7 +116,7 @@
             </div>
             <span class="user-post">Tuonto</span>
             <div class="description-post">Zenless Zone Zero is an upcoming free-to-play urban fantasy action role-playing game developed and published by miHoYo in mainland China, with global publishing by Cognosphere, d/b/a HoYoverse. It is scheduled for release on Microsoft Windows, iOS, Android and PlayStation 5, on July 4, 2024!</div>
-            <div class="tags"><button style="margin-right:10px;">#Zenless Zone Zero</button>></div>
+            <div class="tags"><button style="margin-right:10px;">#Zenless Zone Zero</button></div>
             <div class="img-div-post"><img src="./css/zzz1.jpg" class="img-post"></div>
             <br>
             <input type="button" onclick="location.href='post_page_5.html'" value="See More">
