--- a/phase1/main_page.html
+++ b/phase1/main_page.html
@@ -143,7 +143,7 @@
                     </div>
                     <div class="input-box">
                         <label>Content</label>
-                        <input type="text" placeholder="What's Happening!?" class="post-content-box"  contenteditable="true">
+                        <div placeholder="What's Happening!?" class="post-content-box2"  contenteditable="true"></div>
                     </div>
                     <input type="button" onclick="location.href='main_page.html'" value="Create Post">
                 </form>
