--- a/phase1/register_page.html
+++ b/phase1/register_page.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="page_layout.css">
-    <link rel="stylesheet" type="text/css" href="login_style.css">
-    <link rel="stylesheet" type="text/css" href="style.css">
-    <title>Login</title>
+    <link rel="stylesheet" type="text/css" href="./css/page_layout.css">
+    <link rel="stylesheet" type="text/css" href="./css/animation.css">
+    <link rel="stylesheet" type="text/css" href="./css/style.css">
+    <title>Register</title>
 </head>
 <body>
     <div class = "circles">
@@ -32,39 +32,39 @@
         </div>-->
     </navbar>
 
-    <main>
+    <div class="main">
         <div class="blur-bottom login-form-container">
             <h1 style="text-align: center;">Register</h1>
             <form class='login-form'>
-                <div class="input-box">
+                <div class="input-box-register">
                     <img src = "https://static.vecteezy.com/system/resources/previews/000/646/268/original/email-symbol-icon-vector.jpg"/>
 
-                    <input type="email" placeholder="Email" class = "answer_box">
+                    <input type="email" placeholder="Email">
                 </div>
-                <div class="input-box">
+                <div class="input-box-register">
                     <img src = "https://icon-library.com/images/password-icon-png/password-icon-png-4.jpg"/>
-                    <input type="password"  placeholder="Password"  class = "answer_box">
+                    <input type="password"  placeholder="Password">
                 </div>
-                <div class="input-box">
+                <div class="input-box-register">
                     <img src = "https://icon-library.com/images/password-icon-png/password-icon-png-4.jpg"/>
-                    <input type="password"  placeholder="Verify Password"  class = "answer_box">
+                    <input type="password"  placeholder="Verify Password">
                 </div>
-                <div class="input-box">
+                <div class="input-box-register">
                     <img src = "https://filestore.community.support.microsoft.com/api/images/0ce956b2-9787-4756-a580-299568810730?upload=true"/>
-                    <input type="text"  placeholder="Username"  class = "answer_box">
+                    <input type="text"  placeholder="Username">
                 </div>
-                <div class="input-box">
+                <div class="input-box-register">
                     <img src = "https://filestore.community.support.microsoft.com/api/images/0ce956b2-9787-4756-a580-299568810730?upload=true"/>
-                    <input type="date"  placeholder="Birthday"  class = "answer_box">
+                    <input type="date"  placeholder="Birthday">
                 </div>
-                    <input type="button" onclick="location.href='login_page.html'" value="REGISTER" class = "login_but">
-            </form>      
+                <input type="button" onclick="location.href='main_page.html'" value="REGISTER" class="logregbutton">
+                </form>    
         </div>
-
+      
         <div class="register-prompt">
             Have an account already? Click <a href="login_page.html">here</a> to login.
         </div>
-    </main>
+    </div>
 
     <footer class="sticky-footer">
         <div class="footer-content">
