--- a/phase1/user_profile_page.html
+++ b/phase1/user_profile_page.html
@@ -3,9 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="page_layout.css">
-    <link rel="stylesheet" type="text/css" href="style.css">
-    <link rel="stylesheet" type="text/css" href="login_style.css">
+    <link rel="stylesheet" type="text/css" href="./css/page_layout.css">
+    <link rel="stylesheet" type="text/css" href="./css/style.css">
     <title>Document</title>
 </head>
 <body>
@@ -92,7 +91,7 @@
 
     <!-- popout -->
     <div class = "popup" id = "popup_js">
-    <div class="blur-bottom login-form-container">
+    <div class="blur-bottom update-profile-container">
         <div class = "close-btn" onclick="location.href ='user_profile_page.html'">&times;</div>
         <h1 style="text-align: center;">Update Profile</h1>
         <form class='Update-form'>
